# calunga

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
cortejo/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
terreiro/: .dockerignore  Dockerfile  pyproject.toml
terreiro/app/: auth.py  cache.py  config.py  database.py  main.py  metrics.py  middleware.py  sanitize.py
terreiro/app/agent/: graph.py  llm.py  prompts.py  router.py  stream.py  tools.py
terreiro/app/classifiers/: base.py  cnpj_cpf_invalido.py  despesa_eleitoral.py  despesa_fim_de_semana.py  empresa_irregular.py  explicacoes.py  limite_subcota.py  preco_refeicao.py
terreiro/app/queries/: auth.py  busca_semantica.py  conversas.py  despesas.py  empresas.py  entes.py  federal.py  feed.py  feedback.py  parlamentares.py  raw_ingestao.py  suspeitas.py  votacoes.py
terreiro/app/routers/: auth.py  chats.py  deputados.py  exportacao.py  feed.py  feedback.py  health.py  metrics.py  senadores.py  suspeitas.py
terreiro/app/schemas/: auth.py  chat.py  conversa.py  despesa.py  feed.py  feedback.py  parlamentar.py
terreiro/app/services/: brasil_api.py  camara.py  email.py  embeddings.py  estados.py  feed.py  feed_enrichment.py  ocr.py  senado.py  siconfi.py  token_quota.py  transparencia.py
terreiro/app/tasks/: celery_app.py  ingestao.py
terreiro/migrations/: 0001.create-tables.rollback.sql  0001.create-tables.sql  0002.create-conversas.rollback.sql  0002.create-conversas.sql  0003.alter-empresas-cnpj-bulk.rollback.sql  0003.alter-empresas-cnpj-bulk.sql  0004.create-embeddings.rollback.sql  0004.create-embeddings.sql  0005.create-tse.rollback.sql  0005.create-tse.sql  0006.add-suspeitas-validacao.rollback.sql  0006.add-suspeitas-validacao.sql  0007.create-auth.rollback.sql  0007.create-auth.sql  0008.add-check-constraints.rollback.sql  0008.add-check-constraints.sql  0009.add-shared-column.rollback.sql  0009.add-shared-column.sql  0009.expand-governadores-prefeitos-presidente.rollback.sql  0009.expand-governadores-prefeitos-presidente.sql  0010.create-votacoes.rollback.sql  0010.create-votacoes.sql  0011.expand-embeddings-fts.rollback.sql  0011.expand-embeddings-fts.sql  0012.create-feed.rollback.sql  0012.create-feed.sql  0013.add-feed-updated-at.rollback.sql  0013.add-feed-updated-at.sql  0014.add-embeddings-unique-constraint.rollback.sql  0014.add-embeddings-unique-constraint.sql  0015.create-glossario-termos.rollback.sql  0015.create-glossario-termos.sql  0016.create-orgaos-federais.rollback.sql  0016.create-orgaos-federais.sql  0017.create-mensagem-feedback.rollback.sql  0017.create-mensagem-feedback.sql  0018.uuid-stage-a-add-id-uuid.rollback.sql  0018.uuid-stage-a-add-id-uuid.sql  0019.uuid-p2-leaves-cutover.rollback.sql  0019.uuid-p2-leaves-cutover.sql  (+22 more)
terreiro/pipeline/: definitions.py
terreiro/tests/: conftest.py  test_bulk_delete.py  test_cache.py  test_classifiers.py  test_config_validation.py  test_feedback.py  test_magic_link_rate_limit.py  test_metrics.py  test_migrate_runner.py  test_router.py  test_services.py  test_token_quota.py  test_tools.py
(+72 files in other folders)
