[project]
name = "terreiro"
version = "0.1.0"
description = "Maracatu API — controle social da administração pública"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "asyncpg>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "langgraph>=0.2.0",
    "langchain-google-genai>=2.1.0",
    "langchain-core>=0.3.0",
    "celery[redis]>=5.0.0",
    "dagster>=1.9.0",
    "dagster-webserver>=1.9.0",
    "redis>=5.0.0",
    "PyMuPDF>=1.24.0",
    "scikit-learn>=1.5.0",
    "PyJWT>=2.8.0",
    "resend>=2.0.0",
    "pydantic[email]>=2.0",
    "sse-starlette>=2.0.0",
    "yoyo-migrations>=8.0.0",
    "sentence-transformers>=3.0.0",
    "sentry-sdk[fastapi]>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.dagster]
module_name = "pipeline.definitions"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
