[project]
name = "terreiro"
version = "0.1.0"
description = "Maracatu API — controle social da administração pública"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "asyncpg>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "langgraph>=0.2.0",
    "langchain-google-genai>=2.1.0",
    "langchain-core>=0.3.0",
    "celery[redis]>=5.0.0",
    "dagster>=1.9.0",
    "dagster-webserver>=1.9.0",
    "redis>=5.0.0",
    "PyMuPDF>=1.24.0",
    "scikit-learn>=1.5.0",
    "PyJWT>=2.8.0",
    "resend>=2.0.0",
    "pydantic[email]>=2.0",
    "sse-starlette>=2.0.0",
    "yoyo-migrations>=8.0.0",
    # yoyo's PostgresqlBackend hard-requires the psycopg2 driver
    # (PostgresqlBackend.driver_module == "psycopg2"); without it `yoyo apply`/`yoyo
    # mark` raise ModuleNotFoundError before any connection attempt. asyncpg (used by
    # the app at runtime) is not yoyo-compatible, so the runner needs psycopg2.
    "psycopg2-binary>=2.9.0",
    "sentence-transformers>=3.0.0",
    "sentry-sdk[fastapi]>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
# Start conservative: pyflakes (F), isort (I), bug-prone patterns (B),
# unused/star imports (W). Stylistic-only rules left out for now so the
# first run does not flag the whole codebase.
select = ["F", "I", "B", "W"]
ignore = [
    "B008",  # function call in default arg — common with FastAPI Depends()
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["F401", "F811"]  # fixtures often look unused

[tool.dagster]
module_name = "pipeline.definitions"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
